deployment/openshift/bootstrap-lab/manifests/odf/01-subs-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  name: openshift-storage
